// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TitleWithTagline matches the snapshot, when titleText and taglineText exist 1`] = `
<DocumentFragment>
  .c1 {
  text-align: center;
}

.c1 .title__text {
  text-transform: uppercase;
  font-weight: 300;
  margin-bottom: 0.2em;
}

.c2 {
  text-align: center;
}

.c2 .tagline__text {
  margin-top: 0.2em;
  font-weight: 400;
}

.c0 {
  text-align: center;
}

.c0 .title-with-tagline__header {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
    class="c0"
  >
    <header
      class="title-with-tagline__header"
    >
      <div
        class="c1"
      >
        <h1
          class="title__text"
        >
          A title
        </h1>
      </div>
      <div
        class="c2"
      >
        <p
          class="tagline__text"
        >
          A tagline
        </p>
      </div>
    </header>
  </div>
</DocumentFragment>
`;

exports[`<TitleWithTagline matches the snapshot, when titleText exists and taglineText does not exist 1`] = `
<DocumentFragment>
  .c1 {
  text-align: center;
}

.c1 .title__text {
  text-transform: uppercase;
  font-weight: 300;
  margin-bottom: 0.2em;
}

.c0 {
  text-align: center;
}

.c0 .title-with-tagline__header {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
    class="c0"
  >
    <header
      class="title-with-tagline__header"
    >
      <div
        class="c1"
      >
        <h1
          class="title__text"
        >
          A title
        </h1>
      </div>
    </header>
  </div>
</DocumentFragment>
`;
